@@ -1,9 +1,12 @@
+2019-12-09  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/lto23.adb: New test.
+
 2019-12-02  Sandra Loosemore  <sandra@codesourcery.com>
 
 	Fix bugs relating to flexibly-sized objects in nios2 backend.
 	
 	PR target/92499
-
 	* gcc.target/nios2/pr92499-1.c: New.
 	* gcc.target/nios2/pr92499-2.c: New.
 	* gcc.target/nios2/pr92499-3.c: New.
